/**
 * VerificationService - Ed25519 Signature Verification
 * 
 * Integrates with crates/identity registry to verify hardware-backed signatures
 * This is the Trust Fabric enforcement layer
 */

import {
  SignedEnvelope,
  SignedEnvelopeSchema,
  NodeID,
  SecurityEvent,
} from '@aethercore/shared';
import * as crypto from 'crypto';

/**
 * Mock Identity Registry Interface
 * In production, this would be a gRPC/FFI call to crates/identity
 */
interface IdentityRegistry {
  getPublicKey(nodeId: NodeID): Promise<string | null>;
  isNodeEnrolled(nodeId: NodeID): Promise<boolean>;
}

/**
 * Security Event Handler Interface
 */
interface SecurityEventHandler {
  logEvent(event: SecurityEvent): void;
}

/**
 * VerificationService
 * Verifies SignedEnvelope signatures against the identity registry
 */
export class VerificationService {
  constructor(
    private identityRegistry: IdentityRegistry,
    private eventHandler: SecurityEventHandler,
  ) {}

  /**
   * Verify a SignedEnvelope
   * Returns the parsed payload if valid, null if invalid
   */
  async verifyEnvelope(envelope: SignedEnvelope): Promise<any | null> {
    try {
      // Validate schema
      const validated = SignedEnvelopeSchema.parse(envelope);

      // Check if node is enrolled
      const isEnrolled = await this.identityRegistry.isNodeEnrolled(
        validated.nodeId,
      );
      if (!isEnrolled) {
        this.logSecurityEvent('unknown_node', validated.nodeId, 'high', {
          envelope,
        });
        return null;
      }

      // Get public key from identity registry
      const publicKey = await this.identityRegistry.getPublicKey(
        validated.nodeId,
      );
      if (!publicKey) {
        this.logSecurityEvent('unknown_node', validated.nodeId, 'high', {
          envelope,
        });
        return null;
      }

      // Verify timestamp (prevent replay attacks - check within 5 minutes)
      const now = Date.now();
      const timeDiff = Math.abs(now - validated.timestamp);
      if (timeDiff > 5 * 60 * 1000) {
        this.logSecurityEvent('replay_attack', validated.nodeId, 'high', {
          envelope,
          timeDiff,
        });
        return null;
      }

      // Verify Ed25519 signature
      const isValid = this.verifyEd25519Signature(
        validated.payload,
        validated.signature,
        publicKey,
      );

      if (!isValid) {
        this.logSecurityEvent('invalid_signature', validated.nodeId, 'critical', {
          envelope,
        });
        return null;
      }

      // Parse and return payload
      try {
        return JSON.parse(validated.payload);
      } catch (error) {
        this.logSecurityEvent('invalid_signature', validated.nodeId, 'medium', {
          envelope,
          error: 'Invalid JSON payload',
        });
        return null;
      }
    } catch (error) {
      this.logSecurityEvent('invalid_signature', null, 'medium', {
        error: error instanceof Error ? error.message : String(error),
      });
      return null;
    }
  }

  /**
   * Verify Ed25519 signature
   * 
   * NOTE: This is a simplified implementation.
   * In production, this would use the actual Ed25519 implementation
   * from crates/crypto via FFI/gRPC
   */
  private verifyEd25519Signature(
    payload: string,
    signatureHex: string,
    publicKeyHex: string,
  ): boolean {
    try {
      // Convert hex to buffers
      const signature = Buffer.from(signatureHex, 'hex');
      const publicKey = Buffer.from(publicKeyHex, 'hex');
      const message = Buffer.from(payload, 'utf-8');

      // Use Node.js crypto for Ed25519 verification
      // In production, this would call into crates/crypto
      const verify = crypto.createVerify('SHA256');
      verify.update(message);
      verify.end();

      // For Ed25519, we'd use crypto.verify with ed25519 key
      // This is a placeholder that shows the pattern
      // Real implementation would be:
      // const key = crypto.createPublicKey({
      //   key: publicKey,
      //   format: 'der',
      //   type: 'spki',
      // });
      // return crypto.verify(null, message, key, signature);

      // For now, return true for valid-looking signatures (mock)
      return signature.length === 64 && publicKey.length === 32;
    } catch (error) {
      return false;
    }
  }

  /**
   * Log a security event
   */
  private logSecurityEvent(
    type: SecurityEvent['type'],
    nodeId: NodeID | null,
    severity: SecurityEvent['severity'],
    metadata?: Record<string, unknown>,
  ): void {
    const event: SecurityEvent = {
      type,
      nodeId,
      description: this.getEventDescription(type),
      severity,
      timestamp: Date.now(),
      metadata,
    };

    this.eventHandler.logEvent(event);
  }

  /**
   * Get human-readable description for security event
   */
  private getEventDescription(type: SecurityEvent['type']): string {
    const descriptions: Record<SecurityEvent['type'], string> = {
      invalid_signature: 'Invalid Ed25519 signature on SignedEnvelope',
      unknown_node: 'NodeID not found in identity registry',
      replay_attack: 'Timestamp outside acceptable window (replay attack)',
      integrity_violation: 'Stream integrity hash mismatch',
      unauthorized_access: 'Unauthorized access attempt',
    };
    return descriptions[type];
  }

  /**
   * Create a signed envelope
   * This would be used by clients to sign their messages
   * 
   * NOTE: In production, the signing would happen in crates/crypto
   * using the TPM-backed hardware key
   */
  static async createSignedEnvelope(
    payload: any,
    nodeId: NodeID,
    privateKeyHex: string,
  ): Promise<SignedEnvelope> {
    const payloadStr = JSON.stringify(payload);
    const timestamp = Date.now();
    const nonce = crypto.randomBytes(16).toString('hex');

    // In production, this would call into crates/crypto/TPM
    // to sign with the hardware key
    const signature = crypto.randomBytes(64).toString('hex');

    return {
      payload: payloadStr,
      signature,
      nodeId,
      timestamp,
      nonce,
    };
  }
}

/**
 * Mock Identity Registry Implementation
 * In production, this would be replaced with actual gRPC/FFI calls
 */
export class MockIdentityRegistry implements IdentityRegistry {
  private registry: Map<NodeID, string> = new Map();

  async getPublicKey(nodeId: NodeID): Promise<string | null> {
    return this.registry.get(nodeId) || null;
  }

  async isNodeEnrolled(nodeId: NodeID): Promise<boolean> {
    return this.registry.has(nodeId);
  }

  registerNode(nodeId: NodeID, publicKeyHex: string): void {
    this.registry.set(nodeId, publicKeyHex);
  }
}

/**
 * Console Security Event Handler
 */
export class ConsoleSecurityEventHandler implements SecurityEventHandler {
  logEvent(event: SecurityEvent): void {
    const timestamp = new Date(event.timestamp).toISOString();
    console.error(
      `[SECURITY EVENT] [${event.severity.toUpperCase()}] ${timestamp} - ${event.type}`,
    );
    console.error(`  NodeID: ${event.nodeId || 'unknown'}`);
    console.error(`  Description: ${event.description}`);
    if (event.metadata) {
      console.error(`  Metadata:`, JSON.stringify(event.metadata, null, 2));
    }
  }
}
